# DTVM_SolSDK

./: .gitignore  Cargo.toml  README.md  build.rs  coverage.sh  init_env.sh
.devcontainer/: Dockerfile  devcontainer.json  install_llvm16.sh  install_rust.sh
.github/workflows/: dtvm_sol_dev_docker_release.yml  dtvm_sol_test.yml  nightly_release.yml  release.yml
docker/: Dockerfile  cargo_config  docker_build.sh  install_rust.sh
docs/: compilation-guide.md  developer-guide.md  user-guide.md
docs/release_docs/: quick-start.md
examples/: init_env.sh
examples/counter/: build.sh  counter.sol  counter_offchain.sol
examples/erc20/: build_erc20.sh
examples/fibonacci/: build.sh  fibonacci_offchain.sol
examples/foundry_erc20/: build_forge_test.sh  test_forge_test.sh
examples/foundry_erc20/test/: TestContract.sol
examples/scripts/: WasmTestVM.sol
src/: lib.rs  state_persistence.rs
src/tests/: chain_context_tests.rs  function_optimize_tests.rs  hostapi_tests.rs  mod.rs  openzepplin_strings_full.sol  solidity_strings.rs  test_helper.rs  var_redefine_tests.rs
src/yul2ir/: context.rs  errors.rs  function_deduplicator.rs  instruction.rs  mod.rs  transform.rs  usage.rs  var_scope.rs
stdlib/: chain.c
tools/: build_utils.sh  forge_test_utils.sh
