[package]
name = "yul2wasm"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.22.0"
cc = "1.0"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "9f64611f4bf0151370093ac40361fadc08fb2c21", features = [
    "target-webassembly",
    "llvm16-0-force-static",
] }
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
num-derive = "0.4.2"
regex = "1.11.1"
indexmap = "2.7.0"
byteorder = "1.5.0"
keccak-hash = "0.11.0"
libsecp256k1 = "0.7.1"
libc = "0.2.167"
hex = "0.4.3"
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
clap = { version = "4.5.27", features = ["derive"] }
once_cell = "1.20.2"
tempfile = "3.16.0"
parity-wasm = "0.45.0"
rand = "0.9.0"
home = "0.5.11"
ethabi = "18.0.0"
ethereum-types = "0.14.1"
tokio = "1.44.2"
wasmtime-wasi = "33.0.2"
wizer = "9.0.0"

[features]
default = ["inkwell/llvm16-0-force-static"]
release = []
